[KFileWidget] Use urlFromString instead of QUrl(QString) in setSelection

BUG: 369216

Differential Revision: https://phabricator.kde.org/D3773